# livekit-plugin-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release.yml
livekit/plugins/speechify/: __init__.py  log.py  models.py  tts.py  version.py
scripts/: synthesize.py
tests/: test_plugin_speechify_tts.py
