[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "speechify-livekit"
dynamic = ["version"]
description = "Speechify plugin for LiveKit Agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10.0"
authors = [{ name = "Speechify", email = "hello@speechify.ai" }]
keywords = ["voice", "ai", "realtime", "audio", "video", "livekit", "webrtc", "speechify", "tts"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = ["livekit-agents>=1.6.4", "speechify-api>=2.0.0"]

[project.urls]
Documentation = "https://docs.speechify.ai"
Website = "https://speechify.ai"
Source = "https://github.com/Speechify-AI/livekit-plugin-python"
Issues = "https://github.com/Speechify-AI/livekit-plugin-python/issues"

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.24"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["plugin: mark a test as belonging to a specific plugin"]

[tool.hatch.version]
path = "livekit/plugins/speechify/version.py"

[tool.hatch.build.targets.wheel]
packages = ["livekit"]

[tool.hatch.build.targets.sdist]
include = ["/livekit"]

[tool.uv]
exclude-newer = "7 days"
exclude-newer-package = { livekit-agents = "0 days" }
